--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <nav class="header-nav">
         <a href="" lang="en" class="logo"><span class="logo-blue">Web</span>Studio</a>
         <ul class="header-nav-list">
-          <li class="header-nav-item"><a href="" class="header-nav-link">Студия</a></li>
+          <li class="header-nav-item"><a href="" class="header-nav-link current">Студия</a></li>
           <li class="header-nav-item"><a href="./portfolio.html" class="header-nav-link">Портфолио</a></li>
           <li class="header-nav-item"><a href="" class="header-nav-link">Контакты</a></li>
         </ul>
