--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
             <a href="" lang="en" class="logo"><span class="logo-blue">Web</span>Studio</a>
             <ul class="header-nav-list">
                 <li class="header-nav-item"><a href="./index.html" class="header-nav-link">Студия</a></li>
-                <li class="header-nav-item"><a href="" class="header-nav-link">Портфолио</a></li>
+                <li class="header-nav-item"><a href="" class="header-nav-link current">Портфолио</a></li>
                 <li class="header-nav-item"><a href="" class="header-nav-link">Контакты</a></li>
             </ul>
         </nav>
