fixed bgc logo buttons
hero button dont have margins, paddings and position. Hope it`s not a misstake

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
       </section>
     </main>
     <footer class="footer">
-      <a href="" lang="en" class="logo"><span class="logo-blue">Web</span>Studio</a>
+      <a href="" lang="en" class="logo"><span class="logo-blue">Web</span> <span class="logo-white">Studio</span></a>
       <address class="address">
         <ul class="address-list">
           <li class="address-list-item">
