--- a/portfolio.html
+++ b/portfolio.html
@@ -32,11 +32,11 @@
         <section>
             <h1 class="visually-hidden">Портфолио</h1>
             <ul class="filters-list">
-                <li class="filters-list-item"><button type="button" class="buttons-style">Все</button></li>
-                <li class="filters-list-item"><button type="button" class="buttons-style">Веб-сайты</button></li>
-                <li class="filters-list-item"><button type="button" class="buttons-style">Приложения</button></li>
-                <li class="filters-list-item"><button type="button" class="buttons-style">Дизайн</button></li>
-                <li class="filters-list-item"><button type="button" class="buttons-style">Маркетинг</button></li>
+                <li class="filters-list-item"><button type="button" class="filter-buttons">Все</button></li>
+                <li class="filters-list-item"><button type="button" class="filter-buttons">Веб-сайты</button></li>
+                <li class="filters-list-item"><button type="button" class="filter-buttons">Приложения</button></li>
+                <li class="filters-list-item"><button type="button" class="filter-buttons">Дизайн</button></li>
+                <li class="filters-list-item"><button type="button" class="filter-buttons">Маркетинг</button></li>
             </ul>
             <ul class="project-list">
                 <li  class="project-list-item">
@@ -80,7 +80,7 @@
         </section>
     </main>
     <footer class="footer">
-        <a href="" lang="en" class="logo"><span class="logo-blue">Web</span>Studio</a>
+        <a href="" lang="en" class="logo"><span class="logo-blue">Web</span><span class="logo-white">Studio</span></a>
         <address class="address">
             <ul class="address-list">
                 <li class="address-list-item">
